# MusicDataSetTool

./: .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
src/: __init__.py  analyzer.py  cli.py  config.py
src/features/: __init__.py  audio_features.py
src/integrations/: __init__.py  apple_music_integration.py  spotify_integration.py  youtube_integration.py
src/models/: __init__.py  genre_classifier.py  mood_analyzer.py
src/utils/: __init__.py  cache.py  constants.py  exceptions.py  logger.py  retry.py  validators.py
tests/: conftest.py  test_constants.py  test_exceptions.py  test_genre_classifier.py  test_validators.py
